# agent-browser-cli-py

./: .gitignore  Makefile  README.md  download_binaries.py  pyproject.toml  setup.py  update_version.py
.github/workflows/: build-and-publish.yml  check-version.yml
agent_browser/: __init__.py  cli.py  constants.py  node_runtime.py  version.py
tests/: test_cli.py  test_constants.py  test_download_binaries.py  test_init.py  test_node_runtime.py  test_setup.py
