[build-system]
requires = ["setuptools>=70.1.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-browser-cli"
description = "Python wrapper for agent-browser CLI — browser automation for AI agents, no npm required"
authors = [
    {name = "Ruben J. Jongejan", email = "ruben.jongejan@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = []
dynamic = ["version"]

[project.scripts]
agent-browser = "agent_browser.cli:entry_point"
agent-browser-cli = "agent_browser.cli:entry_point"

[tool.setuptools]
packages = ["agent_browser"]
include-package-data = true
package-data = {"agent_browser" = ["bin/*"]}

[tool.setuptools.dynamic]
version = {attr = "agent_browser.version.__version__"}

[tool.setuptools.cmdclass]
build_py = "setup.CustomBuildPy"
sdist = "setup.CustomSdist"
bdist_wheel = "setup.PlatformBdistWheel"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
publish-url = "https://upload.pypi.org/legacy/"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple"
publish-url = "https://test.pypi.org/legacy/"
